Edit the listView

--- a/app/src/main/res/layout/activity_formular10.xml
+++ b/app/src/main/res/layout/activity_formular10.xml
@@ -10,47 +10,291 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="at.fh.swengb.resifo_android.Formular10Activity">
 
-
-    <Button
-        android:text="Zurück"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_zurueck"
-        android:layout_above="@+id/progressBar"
-        android:layout_alignParentStart="true"
-        android:onClick="Prev" />
-
-    <Button
-        android:text="JA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_weiter"
-        android:layout_above="@+id/progressBar"
-        android:layout_alignParentEnd="true"
-        android:onClick="getNext" />
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/progressBar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:visibility="visible"
-        android:max="88"
-        android:progress="72"
-        android:indeterminate="false" />
-
-    <TextView
-        android:text="Sind diese Daten korrekt?"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:textSize="36sp"
-        android:textAlignment="center"
-        android:id="@+id/textView_korrekt"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+            <TextView
+                android:text="Sind diese Daten korrekt?"
+                android:layout_width="318dp"
+                android:layout_height="wrap_content"
+                android:textSize="36sp"
+                android:textAlignment="center"
+                android:id="@+id/textView_korrekt"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="98dp"
+                android:layout_weight="0.17"
+                android:layout_marginBottom="45dp" />
+
+            <TextView
+                android:text="Persönliche Daten"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                android:textSize="18sp"
+                android:paddingBottom="10dp"
+                tools:text="Persönliche Daten" />
+
+            <TextView
+                android:text="Anrede:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_personAnrede"
+                tools:text="Anrede:" />
+
+            <TextView
+                android:text="Familienname VOR:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_familiennameVor"
+                tools:text="Familienname VOR:" />
+
+            <TextView
+                android:text="Name:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_name"
+                tools:text="Name:" />
+
+            <TextView
+                android:text="Geburtsdaten:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_geburt"
+                tools:text="Geburtsdaten:" />
+
+            <TextView
+                android:text="Religion:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_religion"
+                tools:text="Religion:" />
+
+            <TextView
+                android:text="Familienstand:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_familienstand"
+                tools:text="Familienstand:" />
+
+            <TextView
+                android:text="Staatsangehörigkeit:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_staatsangehoerigkeit"
+                tools:text="Staatsangehörigkeit:" />
+
+            <TextView
+                android:text="ZMR-Zahl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_zmrZahl"
+                tools:text="ZMR-Zahl" />
+
+            <TextView
+                android:text="Reisedokument bei Fremden"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:textSize="18sp"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                tools:text="Reisedokument bei Fremden" />
+
+            <TextView
+                android:text="Reisepassnummer:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_reisepassnummer"
+                tools:text="Reisepassnummer:" />
+
+            <TextView
+                android:text="Ausstellungsdatum:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_ausstellungsdatum"
+                tools:text="Ausstellungsdatum:" />
+
+            <TextView
+                android:text="Ausstellende Behörde"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_ausstellendeBehoerde"
+                tools:text="Ausstellende Behörde" />
+
+            <TextView
+                android:text="Anmeldung der Unterkunft in:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView16"
+                android:textSize="18sp"
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp"
+                tools:text="Anmeldung der Unterkunft in:" />
+
+            <TextView
+                android:text="Adresse:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_anmStrasse"
+                tools:text="Adresse:" />
+
+            <TextView
+                android:text="PLZ, Ort:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_anmOrt"
+                tools:text="PLZ, Ort:" />
+
+            <TextView
+                android:text="Ist das Ihr Hauptwohnsitz?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_hauptwohnsitz"
+                tools:text="Ist das Ihr Hauptwohnsitz?" />
+
+            <TextView
+                android:text="Hauptwohnsitz bleibt in:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView20"
+                android:textSize="18sp"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                tools:text="Hauptwohnsitz bleibt in:" />
+
+            <TextView
+                android:text="Adresse:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_hauptStrasse"
+                tools:text="Adresse:" />
+
+            <TextView
+                android:text="PLZ, Ort:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_hauptOrt"
+                tools:text="PLZ, Ort:" />
+
+            <TextView
+                android:text="Ziehen Sie aus dem Ausland?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_zuzug"
+                tools:text="Ziehen Sie aus dem Ausland?" />
+
+            <TextView
+                android:text="Abmeldung der Unterkunft in:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView24"
+                android:textSize="18sp"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                tools:text="Abmeldung der Unterkunft in:" />
+
+            <TextView
+                android:text="Adresse:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_abmStrasse"
+                android:textSize="14sp"
+                tools:text="Adresse:" />
+
+            <TextView
+                android:text="PLZ, Ort:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_abmOrt"
+                tools:text="PLZ, Ort:" />
+
+            <TextView
+                android:text="Verziehen Sie ins Ausland?"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_verzug"
+                tools:text="Verziehen Sie ins Ausland?" />
+
+            <TextView
+                android:text="Unterkunftgeber:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView28"
+                android:textSize="18sp"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                tools:text="Unterkunftgeber:" />
+
+            <TextView
+                android:text="Nachname:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_unterkunftNachname"
+                tools:text="Nachname:" />
+
+            <TextView
+                android:text="Vorname:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_unterkunftVorname"
+                tools:text="Vorname:" />
+
+            <TextView
+                android:text="Datum:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_unterkunftDatum"
+                tools:text="Datum:" />
+
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.17">
+
+                <Button
+                    android:text="Zurück"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button_zurueck"
+                    android:layout_above="@+id/progressBar"
+                    android:layout_alignParentStart="true"
+                    android:onClick="Prev" />
+
+                <Button
+                    android:text="JA"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button_weiter"
+                    android:layout_above="@+id/progressBar"
+                    android:layout_alignParentEnd="true"
+                    android:onClick="getNext" />
+            </LinearLayout>
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/progressBar"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:visibility="visible"
+                android:max="88"
+                android:progress="72"
+                android:indeterminate="false" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
