--- a/app/src/main/res/layout/simple_list_item_regform.xml
+++ b/app/src/main/res/layout/simple_list_item_regform.xml
@@ -2,16 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
     android:layout_marginTop="5dp">
 
+
     <TextView
-        android:text="IT WORKS"
+        android:text="Übersicht der Meldezettel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        tools:text="IT WORKS" />
-
+        android:id="@+id/textViewRegForm"
+        android:textStyle="normal|bold"
+        android:textSize="14sp"
+        android:textAlignment="center"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp" />
     <ListView
         android:text="TextView"
         android:layout_width="match_parent"
