--- a/app/src/main/res/layout/activity_formular05.xml
+++ b/app/src/main/res/layout/activity_formular05.xml
@@ -64,6 +64,8 @@
             android:text="Zurück"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#b01817"
+            android:textColor="#ffffff"
             android:id="@+id/button_zurueck"
             android:layout_above="@+id/progressBar"
             android:layout_alignParentStart="true"
