--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -17,6 +17,8 @@
         android:id="@+id/button_bearbeiten"
         android:layout_marginTop="50dp"
         android:minHeight="60dp"
+        android:background="#b01817"
+        android:textColor="#ffffff"
         android:textSize="24sp"
         android:maxWidth="60dip"
         android:layout_below="@+id/button_neu"
@@ -42,6 +44,8 @@
         android:id="@+id/button_neu"
         android:layout_marginTop="80dp"
         android:minHeight="60dp"
+        android:background="#b01817"
+        android:textColor="#ffffff"
         android:textSize="24sp"
         android:maxWidth="60dip"
         android:onClick="newForm"
