--- a/app/src/main/res/layout/activity_formular08.xml
+++ b/app/src/main/res/layout/activity_formular08.xml
@@ -101,6 +101,8 @@
             android:text="Zurück"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#b01817"
+            android:textColor="#ffffff"
             android:id="@+id/button_zurueck"
             android:layout_above="@+id/progressBar"
             android:layout_alignParentStart="true"
@@ -126,6 +128,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/button_weiter"
             android:layout_above="@+id/progressBar"
+            android:background="#b01817"
+            android:textColor="#ffffff"
             android:layout_alignParentEnd="true"
             android:onClick="getNext" />
 
