--- a/app/src/main/res/layout/activity_formular10.xml
+++ b/app/src/main/res/layout/activity_formular10.xml
@@ -267,6 +267,8 @@
                     android:text="Zurück"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="#b01817"
+                    android:textColor="#ffffff"
                     android:id="@+id/button_zurueck"
                     android:layout_above="@+id/progressBar"
                     android:layout_alignParentStart="true"
@@ -276,6 +278,8 @@
                     android:text="JA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="#b01817"
+                    android:textColor="#ffffff"
                     android:id="@+id/button_weiter"
                     android:layout_above="@+id/progressBar"
                     android:layout_alignParentEnd="true"
