--- a/app/src/main/res/layout/activity_formular11.xml
+++ b/app/src/main/res/layout/activity_formular11.xml
@@ -28,6 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_zurueck"
+        android:background="#b01817"
+        android:textColor="#ffffff"
         android:layout_above="@+id/progressBar"
         android:layout_alignParentStart="true"
         android:onClick="goBack" />
@@ -59,6 +61,8 @@
         android:text="Speichern"
         android:layout_width="102dp"
         android:layout_height="wrap_content"
+        android:background="#b01817"
+        android:textColor="#ffffff"
         android:id="@+id/button_weiter"
         android:contextClickable="false"
         android:layout_above="@+id/progressBar"
