--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +9,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
     tools:context="at.fh.swengb.resifo_android.MainActivity">
 
     <TextView
-        android:text="WELCOME"
+        android:text="Herzlich Willkommen!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,17 +23,6 @@
         android:textSize="36sp"
         android:layout_weight="1"
         android:textAlignment="center" />
-
-    <TextView
-        android:text="Please select a language"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView_selectLanguage"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:layout_below="@+id/textView_welcome"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -44,14 +35,26 @@
         android:max="100"
         android:progress="100" />
 
-    <Button
-        android:text="Let's go!"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="109dp"
+        app:srcCompat="@drawable/ic_launcher"
+        android:id="@+id/imageView3"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Füllen Sie Ihren Meldezettel aus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/button_go"
-        android:layout_below="@+id/textView_selectLanguage"
+        android:onClick="gotoFirstActivity"
+        android:background="#b01817"
+        android:textColor="#ffffff"
+        android:padding="20dp"
+        android:textSize="16sp"
+        android:layout_below="@+id/imageView3"
         android:layout_centerHorizontal="true"
-        android:onClick="gotoFirstActivity" />
+        android:layout_marginTop="33dp" />
 
 </RelativeLayout>
