--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -64,8 +64,8 @@
         android:layout_below="@+id/textView_reisedokumente"
         android:layout_alignParentStart="true"
         android:layout_marginTop="114dp"
-        android:id="@+id/editText_art"
-        android:hint="Art:" />
+        android:id="@+id/editText_rdNr"
+        android:hint="Nr:" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -86,5 +86,16 @@
         android:layout_alignParentStart="true"
         android:id="@+id/editText_behoerde"
         android:hint="Auszustellende Behörde:" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText_art"
+        android:hint="Art:"
+        android:layout_alignBottom="@+id/editText_rdNr"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="44dp" />
 
 </RelativeLayout>
