--- a/app/src/main/res/layout/activity_formular10.xml
+++ b/app/src/main/res/layout/activity_formular10.xml
@@ -254,7 +254,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_unterkunftDatum"
-                tools:text="Datum:" />
+                tools:text="Datum:"
+                android:paddingBottom="20dp" />
 
 
             <LinearLayout
@@ -278,26 +279,26 @@
                     android:text="JA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#b01817"
-                    android:textColor="#ffffff"
                     android:id="@+id/button_weiter"
                     android:layout_above="@+id/progressBar"
                     android:layout_alignParentEnd="true"
                     android:onClick="getNext" />
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:id="@+id/progressBar"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
+                    android:visibility="visible"
+                    android:max="88"
+                    android:progress="72"
+                    android:indeterminate="false" />
             </LinearLayout>
 
-            <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/progressBar"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentStart="true"
-                android:visibility="visible"
-                android:max="88"
-                android:progress="72"
-                android:indeterminate="false" />
+
         </LinearLayout>
     </ScrollView>
 
