--- a/app/src/main/res/layout/activity_formular03.xml
+++ b/app/src/main/res/layout/activity_formular03.xml
@@ -60,7 +60,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:ems="10"
         android:layout_marginTop="22dp"
         android:id="@+id/editText_zmr"
