--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -61,31 +61,19 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:layout_below="@+id/textView_reisedokumente"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="114dp"
-        android:id="@+id/editText_rdNr"
-        android:hint="Nr:" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/editText_art"
-        android:layout_alignParentStart="true"
-        android:id="@+id/editText_ausstellungsdatum"
-        android:hint="Ausstellungsdatum:" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
         android:layout_below="@+id/editText_ausstellungsdatum"
         android:layout_alignParentStart="true"
         android:id="@+id/editText_behoerde"
         android:hint="Auszustellende Behörde:" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/editText_ausstellungsdatum"
+        android:hint="Ausstellungsdatum:"
+        android:layout_below="@+id/editText_art"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -97,5 +85,17 @@
         android:layout_alignBottom="@+id/editText_rdNr"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="44dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZüÜöÖäÄ"
+        android:layout_marginTop="114dp"
+        android:id="@+id/editText_rdNr"
+        android:hint="Nr:"
+        android:layout_below="@+id/textView_reisedokumente"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
