--- a/app/src/main/res/layout/activity_formular05.xml
+++ b/app/src/main/res/layout/activity_formular05.xml
@@ -100,17 +100,6 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/editText_plz"
-            android:layout_below="@+id/editText_land"
-            android:layout_alignParentStart="true"
-            android:hint="PLZ:"
-            android:layout_toStartOf="@+id/editText_ort" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
             android:id="@+id/editText_ort"
             android:hint="Ort:"
             android:layout_alignBaseline="@+id/editText_plz"
@@ -159,6 +148,16 @@
             android:hint="Türnr.:"
             android:width="100dp"
             android:layout_below="@+id/editText_straße"
+            android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/editText_plz"
+            android:hint="PLZ:"
+            android:layout_below="@+id/editText_land"
             android:layout_alignParentStart="true" />
 
     </RelativeLayout>
