--- a/app/src/main/res/layout/activity_formular11.xml
+++ b/app/src/main/res/layout/activity_formular11.xml
@@ -47,16 +47,6 @@
         android:progress="80"
         android:indeterminate="false" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_below="@+id/editText_nachname"
-        android:layout_alignParentStart="true"
-        android:hint="Vorname" />
-
     <Button
         android:text="Speichern"
         android:layout_width="102dp"
@@ -86,7 +76,17 @@
         android:ems="10"
         android:id="@+id/editText_unterkunft_datum"
         android:hint="Datum"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/editText_vorname"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editText_vorname"
+        android:hint="Vorname"
+        android:layout_below="@+id/editText_nachname"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
