--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -11,7 +11,7 @@
     tools:context="at.fh.swengb.resifo_android.SelectActivity">
 
     <Button
-        android:text="bearbeiten"
+        android:text="anzeigen"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/button_bearbeiten"
