--- a/app/src/main/res/layout/activity_formular10.xml
+++ b/app/src/main/res/layout/activity_formular10.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_formular10"
+    android:id="@+id/activity_edit_person"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="at.fh.swengb.resifo_android.Formular10Activity">
+    tools:context="at.fh.swengb.resifo_android.EditPersonActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,21 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="1">
-
-            <TextView
-                android:text="Sind diese Daten korrekt?"
-                android:layout_width="318dp"
-                android:layout_height="wrap_content"
-                android:textSize="36sp"
-                android:textAlignment="center"
-                android:id="@+id/textView_korrekt"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="98dp"
-                android:layout_weight="0.17"
-                android:layout_marginBottom="45dp" />
+            android:orientation="vertical" >
 
             <TextView
                 android:text="Persönliche Daten"
@@ -73,18 +59,18 @@
                 tools:text="Geburtsdaten:" />
 
             <TextView
-                android:text="Religion:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_religion"
-                tools:text="Religion:" />
-
-            <TextView
                 android:text="Familienstand:"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_familienstand"
                 tools:text="Familienstand:" />
+
+            <TextView
+                android:text="Religion:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_religion"
+                tools:text="Religion:" />
 
             <TextView
                 android:text="Staatsangehörigkeit:"
@@ -111,11 +97,18 @@
                 tools:text="Reisedokument bei Fremden" />
 
             <TextView
-                android:text="Reisepassnummer:"
+                android:text="Art:"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView_reisepassnummer"
-                tools:text="Reisepassnummer:" />
+                android:id="@+id/textView_art"
+                tools:text="Art:" />
+
+            <TextView
+                android:text="Nummer:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_rdNr"
+                tools:text="Nummer:" />
 
             <TextView
                 android:text="Ausstellungsdatum:"
@@ -225,39 +218,6 @@
                 android:id="@+id/textView_verzug"
                 tools:text="Verziehen Sie ins Ausland?" />
 
-            <TextView
-                android:text="Unterkunftgeber:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView28"
-                android:textSize="18sp"
-                android:paddingBottom="10dp"
-                android:paddingTop="20dp"
-                tools:text="Unterkunftgeber:" />
-
-            <TextView
-                android:text="Nachname:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_unterkunftNachname"
-                tools:text="Nachname:" />
-
-            <TextView
-                android:text="Vorname:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_unterkunftVorname"
-                tools:text="Vorname:" />
-
-            <TextView
-                android:text="Datum:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_unterkunftDatum"
-                tools:text="Datum:"
-                android:paddingBottom="20dp" />
-
-
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -303,3 +263,6 @@
     </ScrollView>
 
 </RelativeLayout>
+
+
+
