--- a/app/src/main/res/layout/activity_edit_person.xml
+++ b/app/src/main/res/layout/activity_edit_person.xml
@@ -248,6 +248,19 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_unterkunftDatum"
                 tools:text="Datum:" />
+
+            <Button
+                android:text="Löschen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#b01817"
+                android:textColor="#ffffff"
+                android:id="@+id/button_delete"
+                android:layout_above="@+id/progressBar"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="20dp"
+                android:onClick="deleteRegForm" />
+
         </LinearLayout>
     </ScrollView>
 
